# lbl

./: requirements.txt  setup.cfg
lbljf/: __init__.py
lbljf/core/: base.py  base_classes.py  io.py  logger.py  math.py  parameters.py
lbljf/doc/: AddingAnInstrument.md
lbljf/doc/tests/: test_spirou_06132.py
lbljf/instruments/: carmenes.py  default.py  espresso.py  harps.py  harps_oldcode.py  harpsn.py  maroonx.py  nirps.py  select.py  sophie.py  spirou.py
lbljf/recipes/: __init__.py  lbl_compile.py  lbl_compute.py  lbl_demo.py  lbl_find.py  lbl_mask.py  lbl_noise.py  lbl_reset.py  lbl_telluclean.py  lbl_template.py  lbl_wrap.py
lbljf/resources/: lbl_admin.py  lbl_misc.py  rename_files.py
lbljf/science/: apero.py  general.py  plot.py  tellu_clean.py
