[metadata]
name = lbljf
version = attr: lbljf.core.base.__version__
description = Line by line code for radial velocity
long_description = file: README.md
author = Neil Cook
author_email = neil.james.cook at gmail.com
url = https://github.com/njcuk9999/lbl
license = MIT License

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    numpy
    astropy
    Bottleneck
    ipython
    scipy
    numba
    matplotlib
    pandas
    tables
    tqdm
    PyYAML
    requests
    wget
python_requires = >=3.9

[options.entry_points]
console_scripts =
    lbl_find = lbljf.recipes.lbl_find:main
    lbl_reset = lbljf.recipes.lbl_reset:main
    lbl_demo = lbljf.recipes.lbl_demo:main
